  * Now erases the message after the display (if a pause is invoked)
    - Previously only properly erased when called on the main screen
    - The erasure was however also lost on the main screen when `IconRowMove` and/or `IconRowTune` is active
    - Now fixed for all screens but artefacts may result with some custom banners
- Improves `ProtectNVRAM` Feature
  * Now checks new NVRAM write entries against existing entries
    - Only updates the entries when absent or different
    - Filtering these reduces NVRAM writes and associated wear and tear
  * Expands blocked SecureBoot related items
  * Now clears existing instances of blocked variables
  * Adds `UnlockID` and `UnlockIDCopy` to filtered items
    - These are not certificates but work in concert with the certificates
    - Hence, not required once certificates are filtered
    - Filtering these reduces NVRAM writes and associated wear and tear
- Improves Identification of Linux Instances
  * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
  * The `ProtectNVRAM` feature is now not applied to such loaders
  * The `grub` loader was already accounted for
- Improves OS Boot Filtering
  * The `OSType` flag is now taken into account
- Improves Load Error/Warning Display
  * The `ContinueOnWarning` feature is forced on temporarily if required
- Improves Time Bound Primed Buffer Mitigation
  * Mitigates against RefindPlus spontaneously running default items
  * Intervention is based on a rising threshold based on build type and presence of Apple firmware
  * Also extends threshold by 1.00 seconds when external disks are detected
    - The issue appears to be worse when such disks are connected
- Removes `BootKicker` feature
  * The feature was added as part of attempts to provide the RefindPlus screen on MacPro5,1
  * This was ultimately achieved via other means but the feature was maintained for potential benefits